討伐系の神託を追加

--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
                 <button class="btn good" id="questOpenBtn" hidden>依頼受注</button>
                 <button class="btn good" id="hireBtn" hidden>部隊員雇用</button>
                 <button class="btn primary" id="oracleBtn">神託を授かる</button>
+                <button class="btn primary" id="oracleBattleBtn" hidden>討伐</button>
                 <button class="btn" id="modeWaitBtn">1日待機</button>
                 <button class="btn" id="modePrayBtn">海に祈る</button>
                 <button class="btn ghost" id="enterVillageBtn" hidden>村に入る</button>
