戦闘関連のドキュメント修正

--- a/index.html
+++ b/index.html
@@ -446,6 +446,9 @@
             <li>船取引：街でのみ売買ができる。船の数を増やすと部隊数、物資の所持上限が増える。</li>
             <li>依頼：季節ごとに依頼が更新。依頼は依頼一覧から確認/完了が可能。</li>
             <li>部隊員雇用：村/街で部隊員を雇用できる。雇用枠は季節ごとに補充される。</li>
+            <li>戦闘準備：敵に遭遇すると通常行動不可。戦闘開始、逃走（確率判定）、海に祈る（確定逃走）のみ可能。</li>
+            <li>戦闘：出撃編成で戦闘に出す兵を決定→味方フォーメーションを変更→作戦を変更→開始の手順で戦闘が始まる。</li>
+            <li>戦闘後：戦闘後は地図に戻る。勝利の場合、物資と資金と確率で捕虜を入手および部隊員がレベルアップ。敗北の場合、名声と資金、確率で兵を失う。</li>
             <li>神託：季節ごとに神託を授かることができる。受注中の神託があると新規神託は不可。神託は依頼一覧から確認/完了が可能。</li>
             <li>海に祈る：季節毎に1回、信仰10以上の場合海に祈ることができる。信仰10%を捧げ、資金と食料を得る。</li>
           </ul>
