--- a/index.html
+++ b/index.html
@@ -451,7 +451,8 @@
             <li>戦闘後：戦闘後は地図に戻る。勝利の場合、物資と資金と確率で捕虜を入手および部隊員がレベルアップ。敗北の場合、名声と資金、確率で兵を失う。</li>
             <li>神託：季節ごとに神託を授かることができる。受注中の神託があると新規神託は不可。神託は依頼一覧から確認/完了が可能。</li>
             <li>海に祈る：季節毎に1回、信仰10以上の場合海に祈ることができる。信仰10%を捧げ、資金と食料を得る。</li>
-            <li>季節の変わり目：部隊員/2の食料を消費し、維持費を支払う。</li>
+            <li>毎季節1日：部隊員の維持費を支払い、足りなかった場合はランダムで損耗する。</li>
+            <li>毎季節10,20,30日：部隊員/4の食料を消費し、足りなかった場合はランダムで損耗する。</li>
           </ul>
         </div>
       </div>
