--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
               <div class="map-block mb-12" id="mapBlock">
                 <div class="map-header">
                   <span class="tiny">現在地: <span id="mapPosLabel">(11, 11)</span></span>
+                  <button class="btn ghost" id="mapPinsToggle">ピン表示/非表示</button>
                   <button class="btn ghost" id="mapToggle">全体 / 拡大 切替</button>
                 </div>
                 <canvas id="mapCanvas" width="640" height="640" aria-label="航路マップ"></canvas>
