イベント機能実装、勢力周りの機能実装

--- a/index.html
+++ b/index.html
@@ -379,6 +379,19 @@
     </div>
   </div>
 
+  <div class="modal-backdrop" id="eventModal" hidden>
+    <div class="modal modal-sm">
+      <div class="modal-hd">
+        <div id="eventModalTitle">イベント</div>
+        <button class="modal-close" id="eventModalClose">閉じる</button>
+      </div>
+      <div class="modal-bd">
+        <div id="eventModalBody" class="event-body"></div>
+      </div>
+      <div class="modal-ft" id="eventModalActions"></div>
+    </div>
+  </div>
+
   <div class="modal-backdrop" id="manualModal" hidden>
     <div class="modal">
       <div class="modal-hd">
