貴族依頼の表示を調整

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <button class="btn" id="audienceBribeBtn">賄賂を渡す</button>
                 <button class="btn primary" id="audienceHonorBtn" hidden>仕官する</button>
                 <button class="btn good" id="audienceRequestBtn" hidden>貴族依頼受注</button>
-                <button class="btn ghost" id="audienceResignBtn" hidden>勢力を去る</button>
+                <button class="btn bad" id="audienceResignBtn" hidden>勢力を去る</button>
                 <button class="btn ghost" id="audienceExitBtn">村/街に戻る</button>
               </div>
             </div>
