前線行動仮実装

--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
                 <button class="btn bad" id="battlePrepSurrenderBtn">降伏する</button>
                 <span class="pill" id="battlePrepInfo" hidden>敵推定: - 人</span>
               </div>
+              <div class="mode-actions" id="warActionRow" hidden>
+                <button class="btn" id="warDefendRaidBtn">補給路迎撃</button>
+                <button class="btn" id="warAttackRaidBtn">補給路襲撃</button>
+                <button class="btn" id="warSkirmishBtn">小規模戦闘</button>
+                <button class="btn" id="warSupplyFoodBtn">食糧搬入</button>
+                <button class="btn" id="warEscortBtn">輸送護衛</button>
+                <button class="btn" id="warBlockBtn">補給封鎖</button>
+              </div>
               <div class="mode-actions" id="audienceRow" hidden>
                 <button class="btn" id="audienceBribeBtn">賄賂を渡す</button>
                 <button class="btn primary" id="audienceHonorBtn" hidden>仕官する</button>
